@@ -2,6 +2,7 @@
 
 	* removed dependency on a non-public extension
 	* removed the group gateway from the abstract community application controller as it is not needed for every community application
+	* removed the init() method from the group model and joined it with the constructor
 
 2008-09-08 Frank Naegler  <typo3@naegler.net>
 
